updating rmd with typsetter corrections
updating rmarkdown file following a subsequent run through of the text - included typesetter corrections as well as general syntax corrections

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -33,17 +33,17 @@ knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI
 
 
 ## ***Background***
-Other studies in the social sciences have sought to quantitatively uncover the racial disparities present across different policing operations: some focus on police killings, some focus on stops and searches, and fewer focus on the economic extraction entailed in disproportionate citation levying (Maksuta, 2021; Meng, 2017; Pierson et al., 2020). In the literature, there have been very few papers that run inferential analysis of policing operations while taking into account the question of space: either through cartographic representation of the spatial distribution of police associated outcomes, or of explicit regression models that account for spatial heterogeneity and spatial dependence. In the literature, it seems as if a couple of the most common methodologies that are used most often––somewhat related to the non-spatial data limitations entailed in most large administrative policing data––in policing research focused on racial disparity, are often the *threshold test* and the *veil of darkness test*. The first test uses hit rates (the rate at which a motorist stopped is found with drugs, contraband or weapons, etc.) aggregated across racial subpopulations, compared to the search rates across aggregated racial subpopulations, in order to determine whether or not a certain racial subpopulation is searched more relative to their hit rate. This method has been used by the Stanford Open Policing Project in partnership with the Los Angeles Times, in a study that had a large impact on the public and political spaces’ perception of policing practices in Los Angeles, in the second decade of the 20th century (Poston, Chang, 2019). 
+Other studies in the social sciences have sought to quantitatively uncover the racial disparities present across different policing operations: some focus on police killings, some focus on stops and searches, and fewer focus on the economic extraction entailed in disproportionate citation levying (Maksuta, 2021; Meng, 2017; Pierson et al., 2020). In the literature, there have been very few papers that run inferential analysis of policing operations while taking into account the question of space: either through cartographic representation of the spatial distribution of police associated outcomes, or of explicit regression models that account for spatial heterogeneity and spatial dependence. In the literature, it seems as if a couple of the most common methodologies that are used most often––somewhat related to the non-spatial data limitations entailed in most large administrative policing data––in policing research focused on racial disparity, are often the *threshold test* and the *veil of darkness test*. The first test uses hit rates (the rate at which a motorist stopped is found with drugs, contraband or weapons, etc.) aggregated across racial subpopulations, compared to the search rates across aggregated racial subpopulations, in order to determine whether or not a certain racial subpopulation is searched more relative to their hit rate. This method has been used by the Stanford Open Policing Project in partnership with the Los Angeles Times, in a study that had a large impact on the public and political spaces’ perception of policing practices in Los Angeles, in the second decade of the 21th century (Poston, Chang, 2019). 
 
-The next method mentioned is the veil of darkness test; this test is used often in criminal legal studies because it’s the most popular causal test to determine racial profiling in law enforcement stop practices (Racial and Identity Profiling Advisory Board, 2019). The test essentially compares stop rates across racial subpopulations in a given time span before sundown, to the stop rates for the associated racial subpopulations after sundown; with the goal of identifying whether the lack of sunlight might serve as some natural exogenous factor that might lead to a reduction in racial profiling, and thereby express different in stop rates across racial subpopulations that are revealed with differences or imbalances in stop rates both internal-temporally (within a given racial subpopulation) and also imbalances in comparison (across a set of given racial subpopulations). The assumption with the veil of darkness is that an officer cannot determine the race of a driver after sundown; this assumption may be hard to establish. Moreover, the test is also aspatial and aggregated stop rates by racial subpopulation not taking into account the area of the city where the stops occurred, and what the neighborhood conditions were of the stops that occurred––this test assumes that an officer wouldn’t expect or assume a driver in a perceptively poor car in a predominantly black area to be a black driver, merely because the sun has gone down. This is a strong assumption and it might be noted that the veil of darkness test demands a series of assumptions that are hard to hold within reality––this may especially be the case with smaller datasets that don’t have a large enough sample size to average out the results across geographies and across time. This study expresses an overview of these tests in order to lay out what the field has commonly done when examining racial profiling in law enforcement stops, and to express some of their limitations. 
+The next method mentioned is the veil of darkness test; this test is used often in criminal legal studies because it’s the most popular causal test to determine racial profiling in law enforcement stop practices (Racial and Identity Profiling Advisory Board, 2019). The test essentially compares stop rates across racial subpopulations in a given time span before sundown, to the stop rates for the associated racial subpopulations after sundown; with the goal of identifying whether the lack of sunlight might serve as some natural exogenous factor that might lead to a reduction in racial profiling, and thereby express differences in stop rates across racial subpopulations that are revealed through differences or imbalances in stop rates both internal-temporally (within a given racial subpopulation) and also imbalances in comparison (across a set of given racial subpopulations). The assumption with the veil of darkness is that an officer cannot determine the race of a driver after sundown; this assumption may be hard to establish. Moreover, the test is also aspatial, and the aggregated stop rates by racial subpopulation don't take into account the area of the city where the stops occurred, and what the neighborhood conditions were of those stops––this test assumes, then, that an officer wouldn’t expect or assume a driver in a perceptively poor car in a predominantly black area to be a black driver, merely because the sun has gone down. This is a strong assumption and it might be noted that the veil of darkness test demands a series of assumptions that are hard to hold within reality––this may especially be the case with smaller datasets that don’t have a large enough sample size to average out the results across geographies and across time. This study expresses an overview of these tests in order to lay out what the field has commonly done when examining racial profiling in law enforcement stops, and to express some of their limitations. 
 
-There are three papers that this work builds upon. The first is a study of policing killings using spatial regression models, the next is a study analyzing stop and search rates using a panel data set with descriptive and cartographic analyses, and the last is a study which analyzes 20M stops in the United States and uses the veil of darkness and threshold tests to determine racial disparity in law enforcement stops and searches. 
+There are three papers that this work builds upon. The first is a study of killings by policing institutions using spatial regression models, the next is a study analyzing stop and search rates using a panel data set with descriptive and cartographic analyses, and the last is a study which analyzes 20M stops in the United States and uses veil of darkness and threshold tests to determine racial disparity in law enforcement stops and searches. 
 
-The first is a paper from Maksuta (2021) which uses data from the Mapping Police Violence (MPV) database, which has around 10K recorded police killings in the United States using crowdsourced data from folks on the ground. This is important because police don’t accurately record data on the people they kill, and so if any research relies on the internal records from policing institutions to inquire about these killings, then the quality of the data itself would prevent a real analysis of racial disparity and geographic disparity in police killings. While this is an article whose dependent variable is distinct from the one entailed in this paper––the author examines police killings aggregated at the county level across the entire country, while the current paper examines police stop rates, citation rates, and search rates aggregated at the census tract level in a single city––there is still an overlap both with methodology as well as with the domain of interest. The author uses a Spatial Durbin Model (SDM), which takes into account both spatial dependence of the dependent variable, while also taking into account spatial dependence which is related to the independent variables included in a model (or a subset of independent variables included in the model). In the work, the author describes the relative benefit of utilizing spatial econometric models for regional analysis for this purpose, because the basic Ordinary Least Squares (OLS) model, or other models––negative binomial, for instance––may use regional or geographic units while breaking the assumptions of random association due to spatial autocorrelation, which would bias, or at the very least be ‘inappropriate’ for the model estimation. In regard to their findings, the author noted that police-involved homicides (PIH) are positively associated with a county’s concentrated disadvantage and Gini coefficient (a metric of economic inequality), while also being related (indirectly) to the crime rate of the respective county. This study is important because it uncovers the fact that police killings have a very intensive relationship with disadvantaged geographies. While the study is broad in its scope, the study may have been benefited by running multi-level linear regressions that would have taken into account the police killing rates of cities within counties, or of regions of the United States as compared to others. This would have allowed the paper to be more granular in its analysis of the internal heterogeneity that is present within counties, which are quite a large spatial unit to be used to analyze disparity in police killings.  
+The first is a paper from Maksuta (2021) which uses data from the Mapping Police Violence (MPV) database, which has around 10K recorded police killings in the United States using crowdsourced data from folks on the ground. This is important because police don’t accurately record data on the people they kill, and so if any research relies on the internal records from policing institutions to inquire about these killings, then the quality of the data itself would prevent a real analysis of racial disparity and geographic disparity in police killings. While this is an article whose dependent variable is distinct from the one entailed in this paper––the author examines police killings aggregated at the county level across the entire country, while the current paper examines police stop rates, citation rates, and search rates aggregated at the census tract level in a single city––there is still an overlap both with methodology as well as with the domain of interest. The author uses a Spatial Durbin Model (SDM), which takes into account both spatial dependence of the dependent variable, while also taking into account spatial dependence which is related to the independent variables included in a model (or a subset of independent variables included in the model). In the work, the author describes the relative benefit of utilizing spatial econometric models for regional analysis for this purpose, because the basic Ordinary Least Squares (OLS) model, or other models––negative binomial, for instance––may use regional or geographic units while breaking the assumptions of random association due to spatial autocorrelation, which would bias, or at the very least be ‘inappropriate’ for the model estimation. In regard to their findings, the author noted that police-involved homicides (PIH) are positively associated with a county’s concentrated disadvantage and Gini coefficient (a metric of economic inequality), while also being related (indirectly) to the crime rate of the respective county. This study is important because it uncovers the fact that police killings have a very intensive relationship with structurally disadvantaged geographies. While the study is broad in its scope, the study may have been benefited by running multi-level linear regressions that would have taken into account the police killing rates of cities within counties, or of regions of the United States as compared to others. This would have allowed the paper to be more granular in its analysis of the internal heterogeneity that is present within counties, which are quite a large spatial unit to be used to analyze disparity in police killings.  
 
-The next paper that this study builds off of is a study by Meng (2017) which uses data from the Toronto Police Service to investigate racial disparity in stops and searches. The author uses Toronto, Canada, as a region of their analysis, and they utilize a dataset that extends over a decade. While this article doesn’t necessarily examine policing through a lens that incorporates a regression-based spatial analysis (SLM, SEM, SDM, etc.), the author does generate their work through a spatial frame. They run descriptive statistics that point towards disparate ratios of stop rates for black and white youth in the city, and then they also note the clustering of this disparity in particular geographies in their site of study. Their findings, as hinted towards prior, establishes that police disproportionately direct their forces against black youth (ie. go about performing racial profiling instances), and that this performance is directed disproportionately in areas that have higher white populations and areas that have higher crime rates. The authors point towards the need for a greater democratization of data, regular administrative review based on stop data, and community policing. While the latter recommendation may be specious, and generated in a pre-Floyd framing centered in the feasibility or hope within police reformism, this work is noted generally for its spatial framing and focus on disaggregating the impact of policing in an age-universalized context, and specifically focusing on how racially targeted police practices impact youth in lower-income communities of color. 
+The next paper that this study builds off of is a piece by Meng (2017) which uses data from the Toronto Police Service to investigate racial disparity in stops and searches. The author uses Toronto, Canada, as a region of their analysis, and they utilize a dataset that extends over a decade. While this article doesn’t necessarily examine policing through a lens that incorporates a regression-based spatial analysis (SLM, SEM, SDM, etc.), the author does generate their work through a spatial frame. They run descriptive statistics that point towards disparate ratios of stop rates for black and white youth in the city, and then they also note the clustering of this disparity in particular geographies in their site of study. Their findings, as hinted towards prior, establishes that police disproportionately direct their forces against black youth (ie. perform  racial profiling instances upon black youth), and that this performance is directed disproportionately in areas that have higher white populations and areas that have higher crime rates. The authors point towards the need for a greater democratization of data, regular administrative review based on stop data, and community policing. While the latter recommendation may be specious, and generated in a pre-Floyd framing centered in the feasibility or hope within police reformism, this work is noted generally for its spatial framing and focus on disaggregating the impact of policing in an age-universalized context, and specifically focusing on how racially targeted police practices impact youth in lower-income communities of color. 
 
-The last article that this study mentions is probably the most expansive analysis of racial profiling and disparity in police interactions with civilians in law enforcement stops, and the paper came out of the NYU Center for Urban Science and Progress (CUSP), as well as the Stanford Open Policing Project (OPP) (Pierson et al., 2020). The paper used the aforementioned aspatial methods used to determine racial profiling in stops and searches: respectively the veil of darkness test and the threshold tests. In an analysis of 100M stops in the United States over nearly 10-years, the authors found that black folks were less likely to be stopped after sunset––leading to the implication that officers are less likely to stop drivers and racially profile them due to merely the loss of information caused by reduction in perceiving race at night, and alternatively, more likely to stop black drivers disproportionately due to the means of perceiving their race. In their words: “We found that black drivers were less likely to be stopped after sunset, when a ‘veil of darkness’ masks one’s race, suggesting bias in stop decisions” (Pierson et al., 2020). Furthermore, their veil of darkness tests also found that there was a lower standard of vehicular or person searches for black and latinx drivers. This essentially means that although black and latinx drivers have similar hit rates (rates at which drugs or contraband are found in the process of the search) to white folks, but they have significantly higher search rates, equating to an inequality in the degree to which police levy their search power unjustly upon these populations. This study is very importance because of the ambition of its scope: policing data has been infamously sparse across the nation due to the way in which policing institutions have been historically disinclined at collecting and publishing accurate data on their racial targeting practices––this study not merely collects data from across the nation, but it also collects a panel data set which includes almost a decade of data. A limitation with this study is that it doesn’t analyze the problem of policing and racial profiling through a spatial frame, even though we know that policing institutions use mapping platforms and technologies to orient the way they deploy their resources in racio-geographically disparate ways, and even though we know that therefore police practices have forms of inequality that relate to particular beings and bodies, but also communities and racial geographies. 
+The last article that this study mentions is probably the most expansive analysis of racial profiling and disparity in police interactions with civilians in law enforcement stops, and the paper came out of the NYU Center for Urban Science and Progress (CUSP), as well as the Stanford Open Policing Project (OPP) (Pierson et al., 2020). The paper used the aforementioned aspatial methods to determine racial profiling in stops and searches: respectively the veil of darkness test and the threshold tests. In an analysis of 100M stops in the United States over nearly 10-years, the authors found that black folks were less likely to be stopped after sunset––leading to the implication that officers are less likely to stop drivers and racially profile them due to the mere loss of information caused by a reduction in perceiving race at night, and alternatively, are more likely to stop black drivers during the daytime disproportionately due to having the means of perceiving their race. In their words: “We found that black drivers were less likely to be stopped after sunset, when a ‘veil of darkness’ masks one’s race, suggesting bias in stop decisions” (Pierson et al., 2020). Furthermore, their veil of darkness tests also found that there was a lower standard of evidence when applied to vehicular or person searches for black and latinx drivers. This essentially means that although black and latinx drivers have similar hit rates (rates at which drugs or contraband are found in the process of the search) to white folks, they nonetheless have significantly higher search rates, equating to an inequality in the degree to which police deploy their search power unjustly upon these populations. This study is very importance because of the ambition of its scope: policing data has been infamously sparse across the nation due to the way in which policing institutions have been historically disinclined at collecting and publishing accurate data on their racial targeting practices––this study not merely collects data from across the nation, but it also consolidates a panel data set which includes almost a decade of data from different police jurisdictions across the United States. A limitation with this study is that it doesn’t analyze the problem of policing and racial profiling through a spatial frame, even though we know that policing institutions use mapping platforms and technologies to orient the way they deploy their resources in racio-geographically disparate ways, and even though we know therefore that police practices have forms of inequality that relate to particular beings and bodies, but also communities and racial geographies. 
 
 In light of this broad literature, with its commensurate and extant limitations, this study seeks to make a small contribution to the study of police practices and racially disparate effects by analyzing the interrelation with stops, citations and searches, in a way that prioritizes an analysis that centers the importance of the material-economic effects associated with racial profiling, while also addressing the question of space in a robust manner. 
 
@@ -183,16 +183,16 @@ In turning to the Akaike Information Criterion (AIC) analysis, which allows us t
 (as noted in the methods section, these models accounted for multicollinearity, heteroskedasticity, and the spatial dependence of the residuals from prior nonspatial regressions.)
 
 ## ***Discussion***
-What are the implications for this research? First, this research points towards racial disparities across all three of the dependent variables of interest: (vehicular) stops, citations and searches. The analysis also uncovered that stops and searches are positively associated with the share of black and latinx residents of an area. Lastly, we uncovered that while disparities in searches occur at the level of the body and the geographic aggregate, we found that disparities in citations occur especially at the level of the body but not necessarily at the level of the geographic aggregate (or minimally so at this level of aggregation). More so, this research focuses especially on the relation between these variables, but also especially how law enforcement stops generate an undue economic burden on Black residents due to fine farming, or the disparate levying of tickets on Black motorists caused by racial profiling. While these findings are novel, their implications are even more significant. In this particular historical context, following the police killings of Black folks in the last decade and in relation to the Black Lives Matter movement, this work points towards the ways in which law enforcement institutions don’t secure public safety as much as they work to secure racial differences, violence, and economic sanctions in low-income communities and upon low-income bodies of color. 
+What are the implications for this research? First, this research points towards racial disparities across all three of the dependent variables of interest: (vehicular) stops, citations and searches. The analysis also uncovered that stops and searches are positively associated with the share of black and latinx residents of an area. Lastly, we uncovered that while disparities in searches occur at the level of the body and the geographic aggregate, we found that disparities in citations occur especially at the level of the body but not necessarily at the level of the geographic aggregate (or minimally so at this level of aggregation). More so, this research focuses on the relation between these variables, but also especially on how law enforcement stops generate an undue economic burden on Black residents due to fine farming, or the disparate levying of tickets on Black motorists caused by racial profiling. While these findings are novel, their implications are even more significant. In this particular historical context, following the police killings of Black folks in the last decade and in relation to the Black Lives Matter movement, this work points towards the ways in which law enforcement institutions don’t secure public safety as much as they work to secure racial differences, violence, and economic sanctions in low-income communities and upon low-income bodies of color. 
     
-The research can be expanded with future work. First, the study only contains one year of data––so future work should expand this analysis to multiple years, potentially even using spatial panel sets to make the findings more robust. Second, these findings are contingent on the validity of the methods in which law enforcement officers record valid data that are in line with the standards of the Racial and Identity Profiling Act (RIPA) of 2015. In connection with this, it must be remembered that the racial classifications of drivers which this study relies on, is contingent on the perceptions of officers and how they record drivers. Third, we geocoded ~670k stops but our conversation success rate was only somewhere in the 80-85% range––future research should improve cleaning of addresses and geocoding technology in order to increase the success rate of geocoding. Fourth, when referring to the preliminary OLS models, we find that the adjusted R^2 values were either moderate or low for stops (~.25) and citations (~.13). Future models should include more omitted variables, like dummy variables for highways intersecting with particular tracts, or interaction with highway intersections and a larger population of black and latinx residents. 
+The research can be expanded with future work. First, the study only contains one year of data––so future work should expand this analysis to multiple years, potentially even using spatial panel datasets to make the findings more robust. Second, these findings are contingent on the validity of the methods in which law enforcement officers record valid data that are in line with the standards of the Racial and Identity Profiling Act (RIPA) of 2015. In connection with this, it must be remembered that the racial classifications of drivers which this study relies on, is contingent on the perceptions of officers and how they record drivers. Third, we geocoded ~670k stops but our conversation success rate was only somewhere in the 80-85% range––future research should improve cleaning of addresses and geocoding technology in order to increase the success rate of geocoding. Fourth, when referring to the preliminary OLS models, we find that the adjusted R^2 values were either moderate or low for stops (~.25) and citations (~.13). Future models should include more omitted variables, like dummy variables for highways intersecting with particular tracts, or interaction with highway intersections and a larger population of black and latinx residents. 
 
 
 
 ## ***Conclusion***
-This research answered the research questions first framed at the beginning of this work. They are as follows: I) Are law enforcement stops and outcomes (eg. citations and searches) clustered in particular communities across Los Angeles? , and II) What are the neighborhood factors most associated with these stop and outcome (eg. citation and search) incidences in Los Angeles? The answer to the first question is that all outcomes are clustered generally in downtown Los Angeles (DTLA) as well as Hollywood and Venice more generally; moreover, searches are particularly clustered in South LA, which is a predominantly Black-Latinx geography. The answer to the second question is that poverty, latinx population share of the area, and black population share of the area is most positively associated with the three different law enforcement stops, and then women population share of the area and renter household share of the area are negatively associated with the law enforcement outcomes analyzed in this study (stops, citations and searches). 
+This research answered the research questions first framed at the beginning of this work. They are as follows: I) Are law enforcement stops and outcomes (eg. citations and searches) clustered in particular communities across Los Angeles? , and II) What are the neighborhood factors most associated with these stop and outcome (eg. citation and search) incidences in Los Angeles? The answer to the first question is that all outcomes are clustered generally in downtown Los Angeles (DTLA) as well as Hollywood and Venice more generally; moreover, searches are particularly clustered in South LA, which is a predominantly Black-Latinx geography. The answer to the second question is that poverty, latinx population share of the area, and black population share of the area is most positively associated with the three different law enforcement outcomes, and then women population share of the area and renter household share of the area are negatively associated with the law enforcement outcomes analyzed in this study (stops, citations and searches). 
 
-This study reveals that law enforcement and traffic enforcement are a vector for inequality. Black and Latinx drivers are most subjected to very large disparities in stops and searches that are caused by racial profiling. Moreover, Black drivers specifically are subjected disproportionately to large disparities in citation rates, which can be viewed as a negative economic sanction that impacts a population that is less affluent. Previous studies have lifted up the importance of viewing police as a form of State violence (Wacquant, 2008; Wang, 2018), and this study contributes to that literature, pointing towards the interrelation of stops, citation and searches, and the material-economic disparities entailed in the search process.  
+This study reveals that law enforcement and traffic enforcement are a vector for inequality. Black and Latinx drivers are most subjected to very large disparities in stops and searches that are caused by racial profiling. Moreover, Black drivers specifically are subjected disproportionately to large disparities in citation rates, which can be viewed as a negative economic sanction that impacts a population that has been historically oppressed and consequently is now still at the margins of the material-economic domain of the United States. Previous studies have lifted up the importance of viewing police as a form of State violence (Wacquant, 2008; Wang, 2018), and this study contributes to that literature, pointing towards the interrelation of stops, citation and searches, and the material-economic disparities entailed in the stop process.  
 
 
 ## ***References***
